--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="tagline">Business Name or Tagline</h1>
+                <h1 class="tagline">London Travel App</h1>
             </div>
         </div>
     </div>
@@ -27,10 +27,7 @@
         <div class="col-sm-4">
             <h2>Contact Us</h2>
             <address>
-                <strong>Start Bootstrap</strong>
-                <br>3481 Melrose Place
-                <br>Beverly Hills, CA 90210
-                <br>
+                Address?
             </address>
             <address>
                 <abbr title="Phone">P:</abbr>(123) 456-7890
