--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -65,7 +65,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
+                <p>Copyright &copy; London Tourist App 2016</p>
             </div>
         </div>
         <!-- /.row -->
